# Blog-Generator

./: Dockerfile  README_local.md  main.py  pyproject.toml  requirements.txt  start.sh
src/config/: config.py  database_config.py  dev.py  prod.py
src/core/: database.py  security.py
src/models/: users.py
src/router/: routes.py
src/router/modules/: auth_router.py
src/schemas/: auth.py
src/services/: auth_service.py  email_service.py
src/services/templates/: welcome.html
src/utlis/: dependencies.py  utils.py
